[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/return.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/VCRosdNEUE.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/pause.png" type="Texture" id=3]
[ext_resource path="res://minigames/functionmemory/ui/HUDFM.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.701961, 0.847059, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0.305882, 0 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 55
font_data = ExtResource( 2 )

[node name="HUDFM" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 465.0
margin_right = -12.0
margin_bottom = -11.0
theme = SubResource( 2 )

[node name="Sections" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SectionScore" type="VBoxContainer" parent="Panel/Sections"]
margin_right = 298.0
margin_bottom = 124.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/Sections/SectionScore"]
margin_right = 298.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "SCORE:"
align = 1
valign = 1

[node name="Score" type="Label" parent="Panel/Sections/SectionScore"]
margin_top = 64.0
margin_right = 298.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "##"
align = 1
valign = 1

[node name="SectionTimer" type="VBoxContainer" parent="Panel/Sections"]
margin_left = 302.0
margin_right = 601.0
margin_bottom = 124.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/Sections/SectionTimer"]
margin_right = 299.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "SECONDS:"
align = 1
valign = 1

[node name="Seconds" type="Label" parent="Panel/Sections/SectionTimer"]
margin_top = 64.0
margin_right = 299.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "##"
align = 1
valign = 1

[node name="SectionMoves" type="VBoxContainer" parent="Panel/Sections"]
margin_left = 605.0
margin_right = 904.0
margin_bottom = 124.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/Sections/SectionMoves"]
margin_right = 299.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "PAIRS FLIPPED:"
align = 1
valign = 1

[node name="Moves" type="Label" parent="Panel/Sections/SectionMoves"]
margin_top = 64.0
margin_right = 299.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "##"
align = 1
valign = 1

[node name="SectionButtons" type="VBoxContainer" parent="Panel/Sections"]
margin_left = 908.0
margin_right = 998.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="ButtonPause" type="TextureButton" parent="Panel/Sections/SectionButtons"]
pause_mode = 2
margin_right = 90.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ButtonReset" type="TextureButton" parent="Panel/Sections/SectionButtons"]
pause_mode = 2
margin_top = 64.0
margin_right = 90.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 7
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[connection signal="button_up" from="Panel/Sections/SectionButtons/ButtonPause" to="." method="_on_ButtonPause_button_up"]
[connection signal="mouse_entered" from="Panel/Sections/SectionButtons/ButtonPause" to="." method="_on_ButtonPause_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Sections/SectionButtons/ButtonPause" to="." method="_on_ButtonPause_mouse_exited"]
[connection signal="button_up" from="Panel/Sections/SectionButtons/ButtonReset" to="." method="_on_ButtonReset_button_up"]
[connection signal="mouse_entered" from="Panel/Sections/SectionButtons/ButtonReset" to="." method="_on_ButtonReset_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Sections/SectionButtons/ButtonReset" to="." method="_on_ButtonReset_mouse_exited"]
